# slate

./: .gitignore  LICENSE  README.md  pyproject.toml
mcp_slate/: db.py  schema.sql  server.py  tools.py  validation.py
tests/: test_integration.py  test_tools.py  test_validation.py
